--- a/style.css
+++ b/style.css
@@ -6,50 +6,41 @@
     box-sizing: border-box;
     font-family: 'Spartan', sans-serif;
 }
-
 body{
     width: 100%;
 }
 html{
     scroll-behavior: smooth;
 }
-
 h1 {
     font-size: 50px;
     line-height: 64px;
     color: #222;
 }
-
 h2 {
 font-size: 46px;
 line-height: 54px;
 color: #222;
 }
-
 h4 {
 font-size: 20px;
 color: #222;
 }
-
 h6 {
 font-weight: 700;
 font-size: 12px;
 }
-
 p {
 font-size: 16px;
 color: #465b52;
 margin: 15px 0 20px 0;
 }
-
 .section-p1 {
 padding: 20px 40px;
 }
-
 .section-m1 {
 margin: 40px 0;
 }
-
 button.normal{
     font-size: 14px;
     font-weight: 600;
@@ -77,14 +68,12 @@ button.normal{
     left: 0;
     z-index: 5;
 }
-
 ul{
     display: flex;
     text-align: center;
     justify-content: center;
     align-items: center;
 }
-
 ul li{
     list-style: none;
     padding: 0 20px;
@@ -103,7 +92,6 @@ ul li a,#mobile a{
     display: none;
     align-items: center;
 }
-
 ul li a:hover,
 ul li .active{
     color: #088178;
@@ -119,13 +107,14 @@ ul li .active::after{
     left: 20px;
 }
 
-/* Home */
+
+/* Home Page*/
 #hero{
     background-image: url(img/hero4.png);
     height: 90vh;
     width: 100%;
     background-size: cover;
-    background-position: top 25% right 0;
+    background-position: 55%;
     padding: 0 80px;
     display: flex;
     flex-direction: column;
@@ -135,12 +124,9 @@ ul li .active::after{
 #hero h4{
     padding-bottom: 15px;
 }
-
 #hero h1{
     color: #088178;
 }
-
-
 #hero button{
     background-image: url(img/button.png);
     border: 0;
@@ -153,7 +139,6 @@ ul li .active::after{
     font-weight: 700;
     font-size: 15px;
 }
-
 #feature {
     display: flex;
     align-items: center;
@@ -161,24 +146,21 @@ ul li .active::after{
     flex-wrap: wrap;
 
 }
-
 #feature .f-box{
-    width: 125px;
+    width: 15%;
     text-align: center;
     padding: 15px 10px;
     border: 1px solid #cce7d0;
     border-radius: 4px;
     box-shadow: 20px 20px 34px rgba(0, 0, 0, .03);
-    margin: 15px 0;
+    margin: 15px 5px;
 }
 #feature .f-box img{
     width: 100%;
     margin-bottom: 10px;
 }
-
 #feature .f-box:hover{
     box-shadow: 10px 10px 54px rgba(0, 0, 0, .1);
-  
 }
 #feature .f-box h6{
     display: inline-block;
@@ -221,7 +203,6 @@ ul li .active::after{
 }
 #product1 .p:hover{
     box-shadow: 20px 20px 30px rgba(0, 0, 0, .06);
-
 }
 #product1 .p img{
     width: 100%;
@@ -269,7 +250,6 @@ font-size: 12px;
     flex-wrap: wrap;
     justify-content: space-between;
 }
-
 #banner{
    display: flex;
    flex-direction: column;
@@ -296,7 +276,6 @@ font-size: 12px;
     background-color: #088178;
     color: #fff;
 }
-
 #sm-banner {
     display: flex;
     justify-content: space-between;
@@ -311,7 +290,6 @@ font-size: 12px;
     background-size: cover;
     background-position: center;
     height: 50vh;
-    min-width: 420px;
     width: 48%;
     padding: 30px;
 }
@@ -366,7 +344,7 @@ button.white{
     background-size: cover;
     background-position: center;
     height: 35vh;
-    min-width: 30%;
+    min-width: 32%;
     padding: 20px;
     margin-bottom: 20px;
 }
@@ -386,7 +364,6 @@ button.white{
 #tx-banner .box-3{
     background-image: url("img/banner/b18.jpg");
 }
-
 #newsletters{
     display: flex;
     justify-content: space-between;
@@ -432,15 +409,13 @@ button.white{
 }
 #newsletters .form{
 display: flex;
-width: 45%;
+width: 40%;
 }
-
 footer{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
 }
-
 footer .col{
     display: flex;
     flex-direction: column;
@@ -489,16 +464,102 @@ footer .follow i:hover,
 footer a:hover{
     color: #088178;
 }
-
 footer .copyright{
     width: 100%;
     text-align: center;
 }
 
+
+/* Shop Page*/
+#page-header{
+    background-image: url(img/banner/b1.jpg);
+    width: 100%;
+    height: 40vh;
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    padding: 14px;
+}
+#page-header h2,
+#page-header p{
+    color: #fff;
+}
+#pagination{
+    text-align: center;
+}
+#pagination a{
+    text-decoration: none;
+    background-color: #088178;
+    padding: 15px 20px;
+    border-radius: 4px;
+    color: #ffffff;
+    font-weight: 600;
+}
+#pagination a i{
+    font-size: 15px;
+    font-weight: 600;
+}
+
+
+/* Detail page */
+#details{
+    display: flex;
+    margin-top: 20px;
+}
+#details .single-pro-img{
+    width: 40%;
+    margin-right: 40px;  
+}
+#details img{
+    width: 100%;
+}
+.sm-img-row{
+    display: flex;
+    justify-content: space-between;
+}
+.sm-img-row div{
+    flex-basis: 24%;
+    cursor: pointer;
+}
+#details .single-pro-des{
+    width: 50%;
+    padding-top: 30px;
+}
+#details .single-pro-des h4{
+    padding: 40px 0 20px 0;
+}
+#details .single-pro-des select{
+    display: block;
+    padding: 5px 10px;
+    margin-bottom: 10px;
+}
+#details .single-pro-des input{
+    width: 50px;
+    height: 45px;
+    padding-left: 10px;
+    font-size: 16px;
+    margin-right: 10px;
+}
+#details .single-pro-des input:focus{
+    outline: none;
+}
+#details .single-pro-des button{
+    background-color: #088178;
+    color: #fff;
+    margin: 0 0 20px 0;
+}
+#details .single-pro-des span{
+    line-height: 25px;
+}
+
+/* Media Query */
 @media (max-width: 799px) {
     ul {
         height: 100vh;
-        width: 300px;
+        width: 30%;
         background-color: #E3E6F3;
         display: flex;
         flex-direction: column;
@@ -536,12 +597,12 @@ footer .copyright{
         display: none;
     }
     #hero {
-        height: 70vh;
-        background-position:top 30% right 36%;
+        height: 60vh;
         padding: 0 38px;
     }
     #feature {
         padding: 20px 30px;
+        justify-content: space-around;
     }
     #feature .f-box {
         width: 200px;
@@ -556,10 +617,16 @@ footer .copyright{
     #banner {
         height: 20vh;
     }
+    #banner h2 {
+        font-size: 23px;
+    }
     #sm-banner .banner-box {
         height: 30vh;
         min-width: 100%;
         padding: 30px;
+    }
+    #sm-banner .box-2 {
+        margin-top: 20px;
     }
     #sm-banner{
         padding: 20px 20px;
@@ -569,6 +636,7 @@ footer .copyright{
     }
     #tx-banner .banner-box {
         height: 25vh;
+        width: 30%;
     }
     #tx-banner h2 {
         font-size: 17px;
@@ -576,8 +644,20 @@ footer .copyright{
     #tx-banner h3 {
         font-size: 12px;
     }
-
+    #newsletters .form {
+        display: flex;
+        width: 70%;
+    }
+    /* Shop Page */
+    #page-header {
+        height: 30vh;
+    }
+    /* Detail Page */
+    #details .single-pro-des button {
+        margin: 0 0 20px 0;
+    }
 }
+
 @media (max-width:477px) {
     .header {
         display: flex;
@@ -585,10 +665,13 @@ footer .copyright{
         justify-content: space-between;
         padding: 10px 20px;
     }
+    ul {
+        width: 50%;
+    }
     #hero {
         height: 50vh;
-        background-position: 45%;
         padding: 0 20px;
+        background-position: 60%;
     }
     #hero h2 {
         font-size: 24px;
@@ -605,10 +688,6 @@ footer .copyright{
     #hero h4 {
         padding-bottom: 8px;
     }
-    ul {
-        height: 100vh;
-        width: 170px;
-    }
     #feature {
         display: flex;
         align-items: center;
@@ -617,7 +696,7 @@ footer .copyright{
         padding: 20px 20px;
     }
     #feature .f-box {
-        width: 48%;
+        width: 45%;
     }
     #product1 .p {
         margin: 15px 0px;
@@ -630,10 +709,10 @@ footer .copyright{
         padding: 20px 20px;
     }
     #product1 h2 {
-        font-size: 35px;
+        font-size: 25px;
     }
     #banner h2 {
-        font-size: 18px;
+        font-size: 15px;
         padding: 0;
     }
     #banner h4 {
@@ -643,7 +722,6 @@ footer .copyright{
         padding: 8px 15px;
     }
     #banner {
-        height: 17vh;
         padding: 10px;
     }
     #tx-banner h2 {
@@ -656,6 +734,9 @@ footer .copyright{
     #tx-banner .banner-box {
         height: 15vh;
         width: 30%;
+    }
+    #sm-banner .box-2 {
+        margin-top: 20px;
     }
     #newsletters .form {
         width: 100%;
@@ -695,7 +776,39 @@ footer .copyright{
     .section-m1 {
         margin: 20px 0;
     }
+    /* Shop Page */
+    #page-header {
+        height: 20vh;
+    }
+    /* Detail Page */
+    #details {
+        display: flex;
+        flex-direction: column;
+        padding: 20px 20px;
+    }
+    #details .single-pro-img {
+        width: 100%;
+        margin-right: 0;
+    }
+    #details .single-pro-des {
+        width: 100%;
+    }
+    #details .single-pro-des button {
+        margin: 0 0 25px 0;
+    }
+    #details .single-pro-des h4 {
+        padding: 15px 0 5px 0;
+        font-size: 25px;
+    }
+    #details .single-pro-des h2 {
+        font-size: 35px;
+    }
+    #details .single-pro-des select {
+        margin-bottom: 10px;
+        margin-top: 5px;
+    }
 }
+
 
 
 
