--- a/style.css
+++ b/style.css
@@ -555,6 +555,68 @@ footer .copyright{
     line-height: 25px;
 }
 
+/* Blog Page */
+#page-header.blog-header{
+    background-image: url("img/banner/b19.jpg");
+}
+#blog{
+    padding: 150px 150px 0 150px;
+}
+#blog .blog-box{
+    display: flex;
+    align-items: center;
+    width: 100%;
+    padding-bottom: 90px;
+    position: relative;
+}
+#blog .blog-box .blog-img{
+    width: 50%;
+    margin-right: 40px;
+}
+#blog .blog-box .blog-img img{
+    width: 100%;
+    height: 200px;
+    margin-right: 40px;
+    object-fit: cover;
+}
+#blog .blog-box .blog-des{
+    width: 50%;
+}
+#blog .blog-box .blog-des a{
+    text-decoration: none;   
+    font-size: 11px;
+    color: #000;
+    font-weight: 700; 
+    position: relative;
+    transition: 0.2s;
+}
+#blog .blog-box .blog-des a::after{
+    content: '';
+    width: 50px;
+    height: 1px;
+    background-color: #000;
+    position: absolute;
+    top: 4px;
+    right: -60px;
+    transition: 0.2s;
+}
+#blog .blog-box .blog-des a:hover{
+    color: #088178;
+}
+#blog .blog-box .blog-des a:hover::after{
+    background-color: #088178;
+}
+#blog .blog-box h1{
+    position: absolute;
+    left: 0;
+    top: -45px;
+    font-weight: 700;
+    font-size: 70px;
+    color: #c9cbce;
+    z-index: -99;
+}
+
+
 /* Media Query */
 @media (max-width: 799px) {
     ul {
@@ -656,8 +718,28 @@ footer .copyright{
     #details .single-pro-des button {
         margin: 0 0 20px 0;
     }
+    /* Blog Page */
+    #blog {
+        padding: 150px 20px 0 20px;
+    }
+    #blog .blog-box {
+        display: flex;
+        flex-direction: column;
+    }
+    #blog .blog-box .blog-des {
+        width: 100%;
+    }
+    #blog .blog-box .blog-img {
+        width: 100%;
+        margin-right: 0px;
+        margin-bottom: 20px;
+    }
+    #blog .blog-box .blog-img img {
+        margin-right: 0px;
+    }
 }
 
+/* Media Query */
 @media (max-width:477px) {
     .header {
         display: flex;
