--- a/style.css
+++ b/style.css
@@ -616,6 +616,37 @@ footer .copyright{
     z-index: -99;
 }
 
+/* About us page */
+#page-header.about-header{
+    background-image: url(img/about/banner.png);
+
+}
+#about{
+    display: flex;
+    align-items: center;
+    margin-top: 20px;
+}
+#about img{
+    width: 50%;
+    height: auto;
+}
+#about div{
+    padding-left: 40px;
+}
+#about-app{
+    text-align: center;
+}
+#about-app .video{
+    width: 70%;
+    height: 100%;
+    margin: 20px auto 0 auto;
+}
+#about-app .video video{
+    width: 80%;
+    height: 100%;
+    border-radius: 20px;
+}
+
 
 /* Media Query */
 @media (max-width: 799px) {
@@ -710,14 +741,17 @@ footer .copyright{
         display: flex;
         width: 70%;
     }
+
     /* Shop Page */
     #page-header {
         height: 30vh;
     }
+
     /* Detail Page */
     #details .single-pro-des button {
         margin: 0 0 20px 0;
     }
+
     /* Blog Page */
     #blog {
         padding: 150px 20px 0 20px;
@@ -737,6 +771,18 @@ footer .copyright{
     #blog .blog-box .blog-img img {
         margin-right: 0px;
     }
+        /* About Page */
+        #about {
+            display: flex;
+            flex-direction: column;
+        }
+        #about img{
+            width: 100%;
+        }
+        #about div {
+            margin-top: 30px;
+            padding-left: 0px;
+        }
 }
 
 /* Media Query */
@@ -858,10 +904,12 @@ footer .copyright{
     .section-m1 {
         margin: 20px 0;
     }
+
     /* Shop Page */
     #page-header {
         height: 20vh;
     }
+
     /* Detail Page */
     #details {
         display: flex;
@@ -888,6 +936,30 @@ footer .copyright{
     #details .single-pro-des select {
         margin-bottom: 10px;
         margin-top: 5px;
+    }
+
+    /* About Page */
+    #about {
+        display: flex;
+        flex-direction: column;
+        padding: 20px 20px;
+    }
+    #about img{
+        width: 100%;
+    }
+    #about div {
+        margin-top: 20px;
+        padding-left: 0px;
+    }
+    #about h2{
+        font-size: 30px;
+        text-align: center;
+    }
+    #about-app h1{
+        font-size: 35px;
+    }
+    #about-app .video{
+        width: 100%;
     }
 }
 
